# rust-lisp-wasm

./: .gitignore  .rsw.json  Cargo.toml  bun.lockb  index.html  index.scss  package-lock.json  package.json  prelude.scm  vite.config.ts
@rsw/hey/: Cargo.toml
@rsw/hey/src/: eval.rs  lib.rs
rispy/: Cargo.toml  index.html  index.scss
rispy/src/: app.rs  compile.rs  eval.rs  expr.rs  lib.rs  parse.rs  std_env.rs  vm.rs
sicp/: 2.17.scm  2.18.scm  2.19.scm  2.20.scm  2.21.scm  2.22.scm  2.23.scm  2.24.scm  2.25.scm  2.26.scm  2.27.scm  2.28.scm  2.29.scm  2.30.scm  2.31.scm  2.32.scm  2.33.scm  2.34.scm  2.35.scm  2.36.scm  2.37.scm  2.38.scm  2.39.scm  2.40.scm  2.41.scm  2.42.scm  2.43.scm  2.53.scm  2.54.scm  2.55.scm  2.56.scm  2.57.scm  2.58-b.scm  2.58.scm  2.59.scm
src/: App.css  App.tsx  app.rs  compile.rs  expr.rs  macro_expand.rs  main.rs  parse.rs  vm.rs
src/tests/: compile_test.rs  gc_test.rs  macros_test.rs  mod.rs  prelude_test.rs  print_test.rs  run_test.rs  sicp_test.rs
