[package]
name = "rispy"
version = "0.1.0"
authors = ["meris bahti"]
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
cfg-if = "1.0.0"
web-sys = "0.3.69"
wasm-bindgen = "0.2.79"
nom = "7.1.0"
yew = { version="0.20", features=["csr"] }


# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
gloo = "0.11.0"
gloo-console = "0.3.0"
gloo-events = "0.2.0"
include_dir = "0.7.4"
nom_locate = "4.2.0"
once_cell = "1.19.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[features]
# default = ["console_error_panic_hook" ,"wee_alloc"]
